# ORFRead_WebApp

./: README.md  main.py  pyproject.toml
App/: __init__.py  database.py  readorf.py  routes.py
App/templates/: home.html  test.html  upload.html
orfread/: __init__.py  database.py  readorf.py  routes.py
orfread/static/: query_styles.css  styles.css
orfread/templates/: home.html  query.html  query_results.html  search.html  test.html  upload.html
