[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xyz"
version = "0.1.0"
authors = [{ name = "garu", email = "tastytrifle@gmail.com" }]
description = "desc"
readme = "README.md"
license = "MIT"
keywords = ["word1","word2"]
license-files = ["LICENSE.txt"]
requires-python = ">=3.8"
dependencies = [
    "numpy>=2.2.4",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
]
